# tunante

./: .gitignore  .gitmodules  CLAUDE.md  README.md  package-lock.json  package.json  update_mac.sh  vite.config.ts
.cargo/: config.toml
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: gme_tags.rs  test_mouse.rs
src-tauri/game-music-emu-patch/: .cargo_vcs_info.json  Cargo.toml  build.rs
src-tauri/game-music-emu-patch/src/: lib.rs  native.rs  wrapper.rs
src-tauri/hepsf-rs/: Cargo.toml  build.rs  sexypsf_wrapper.c
src-tauri/hepsf-rs/examples/: psf_test.rs
src-tauri/hepsf-rs/he/: r3000asm.c
src-tauri/hepsf-rs/sexypsf/: Misc.c  PsxCommon.h  PsxCounters.h  PsxInterpreter.c  PsxMem.c  PsxMem.h  R3000A.h  types.h
src-tauri/hepsf-rs/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/lazygsf-rs/: Cargo.toml  build.rs  stubs.c
src-tauri/lazygsf-rs/lazygsf/mgba/src/util/vfs/: vfs-file.c
src-tauri/lazygsf-rs/lazygsf/src/: lazygsf.c
src-tauri/lazygsf-rs/src/: lib.rs
src-tauri/lazyusf2-rs/: Cargo.toml  build.rs
src-tauri/lazyusf2-rs/lazyusf2/api/: m64p_types.h
src-tauri/lazyusf2-rs/lazyusf2/main/: main.c
src-tauri/lazyusf2-rs/lazyusf2/r4300/: cached_interp.c  cp0.c  fpu.h  interupt.c  pure_interp.c
src-tauri/lazyusf2-rs/lazyusf2/usf/: usf.c  usf.h  usf_internal.h
src-tauri/lazyusf2-rs/src/: lib.rs
src-tauri/lazyusf2-rs/tests/: loz_test.rs  multi_test.rs  play_test.rs  rodio_test.rs
src-tauri/libappindicator-patch/: Cargo.toml
src-tauri/libappindicator-patch/src/: lib.rs
src-tauri/opus-decoder-patch/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
src-tauri/opus-decoder-patch/src/: compare.rs  entropy.rs  error.rs  lib.rs  multistream.rs  packet.rs
src-tauri/opus-decoder-patch/src/celt/: bands.rs  cwrs.rs  kiss_fft.rs  laplace.rs  mdct.rs  mod.rs  modes.rs  quant_bands.rs  rate.rs  vq.rs
src-tauri/opus-decoder-patch/src/silk/: decode_core.rs  entropy_tables.rs  gain.rs  lbrr.rs  lpc.rs  ltp.rs  mod.rs  nlsf.rs  pitch.rs  plc.rs  resampler.rs  resampler_private.rs  resampler_rom.rs  stereo.rs  tables.rs
src-tauri/opus-decoder-patch/tests/: celt_output_rates.rs  common.rs  conformance_rfc.rs  multistream.rs
src-tauri/src/: debug_log.rs  lib.rs  main.rs  shortcuts.rs  updater.rs
src-tauri/src/audio/: engine.rs  gme.rs  gsf.rs  mod.rs  opus.rs  psf.rs  psf2.rs  queue.rs  twosf.rs  usf.rs  vgm_path.rs  vgmstream.rs
src-tauri/src/commands/: library.rs  mod.rs  player.rs  playlists.rs  settings.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/metadata/: gme_reader.rs  gsf_reader.rs  mod.rs  psf2_reader.rs  psf_reader.rs  ratings_sync.rs  reader.rs  twosf_reader.rs  usf_reader.rs  vgmstream_reader.rs  writer.rs
src-tauri/src/watcher/: mod.rs
src-tauri/tests/: psf_seek_test.rs
src-tauri/tray-icon-patch/: Cargo.toml
src-tauri/tray-icon-patch/src/: lib.rs
src-tauri/tray-icon-patch/src/platform_impl/gtk/: mod.rs
src-tauri/tray-icon-patch/src/platform_impl/macos/: mod.rs
src-tauri/tray-icon-patch/src/platform_impl/windows/: mod.rs
src-tauri/vgmstream-rs/: Cargo.toml  build.rs
src-tauri/vgmstream-rs/src/: ffi.rs  lib.rs
src-tauri/vio2sf-rs/: Cargo.toml  build.rs
src-tauri/vio2sf-rs/src/: lib.rs
src-tauri/viogsf-rs/: CMakeLists.txt  Cargo.toml  arm_compat.h  build.rs  viogsf_wrapper.cpp  viogsf_wrapper.h
src-tauri/viogsf-rs/src/: lib.rs
src/lib/components/: ArtworkPanel.svelte  ContextMenu.svelte  DebugWindow.svelte  ErrorToast.svelte  FilesBrowser.svelte  FolderDropOverlay.svelte  MetadataDialog.svelte  PlayerControls.svelte  SearchBar.svelte  Sidebar.svelte  TrackList.svelte  UpdateDialog.svelte
src/lib/components/settings/: AboutSettings.svelte  GeneralSettings.svelte  LibrarySettings.svelte  SettingsPanel.svelte  ShortcutsSettings.svelte  ThemeSettings.svelte
src/lib/stores/: consoles.svelte.ts  files.svelte.ts  library.svelte.ts  player.svelte.ts  playlists.svelte.ts  settings.svelte.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
static/: volume-popup.html
