[package]
name = "tunante"
version = "0.1.0"
edition = "2021"
description = "Cross-platform music player for video game music and standard audio formats"
license = "GPL-2.0"

[lib]
name = "tunante_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["global-mouse"]
# Global mouse button shortcuts (Linux: evdev, macOS: CGEventTap).
# Disable with --no-default-features to skip the mouse listener overhead.
global-mouse = ["evdev", "core-graphics", "core-foundation"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.22", features = ["symphonia-mp3", "symphonia-flac", "symphonia-isomp4", "symphonia-aac", "symphonia-ogg", "symphonia-vorbis", "symphonia-wav", "symphonia-pcm"] }
rusqlite = { version = "0.32", features = ["bundled"] }
lofty = "0.21"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
log = "0.4"
thiserror = "2"
parking_lot = "0.12"
base64 = "0.22"
notify = { version = "7", features = ["macos_kqueue"] }
ogg = "0.9"
opus-decoder = { path = "opus-decoder-patch" }
game-music-emu = { path = "game-music-emu-patch", default-features = false, features = ["ay", "gbs", "gym", "hes", "kss", "nsf", "nsfe", "sap", "spc", "vgm"] }
vgmstream-rs = { path = "vgmstream-rs" }
lazygsf-rs = { path = "lazygsf-rs" }
viogsf-rs = { path = "viogsf-rs" }
vio2sf-rs = { path = "vio2sf-rs" }
hepsf-rs = { path = "hepsf-rs" }
reqwest = { version = "0.13.2", features = ["json"] }
sha2 = "0.10"
urlencoding = "2"
png = "0.17"
open = "5.3.3"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.13.2", optional = true }
gio = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.25", optional = true }
core-foundation = { version = "0.10", optional = true }
libc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSProcessInfo", "NSString"] }

[target.'cfg(any(target_os = "macos", windows))'.dependencies]
tray-icon = "0.21"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"

# Patch tray-icon and libappindicator to support left-click toggle on Linux.
# On Linux, libayatana-appindicator normally shows the context menu on ALL
# clicks. Our patched tray-icon calls app_indicator_set_secondary_activate_target()
# to make the SNI `Activate` D-Bus method (left-click on KDE) trigger the
# first menu item ("Show / Hide") instead of showing the menu.
[patch.crates-io]
tray-icon = { path = "tray-icon-patch" }
libappindicator = { path = "libappindicator-patch" }
